# leander

./: .gitignore  Cargo.toml  README.md  extension.toml  test.lean
.github/workflows/: ci.yml  release.yml
crates/infoview/: Cargo.toml
crates/protocol/: Cargo.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: code_lens.rs  documents.rs  framing.rs  goals.rs  inlay.rs  lean_rpc.rs  lsp.rs  main.rs  progress.rs  restart.rs  semantic_tokens.rs  snoop.rs  state.rs
languages/lean4/: config.toml
src/: lib.rs
