[workspace]
members = ["crates/proxy", "crates/infoview", "crates/protocol"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/SrGaabriel/leander"
authors = ["Gabriel Minatel"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ropey = "1.6"
arc-swap = "1.9"
dashmap = "6.1"
lru = "0.17"
protocol = { path = "crates/protocol" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package]
name = "leander"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "^0.7"
