[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ropey.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
lru.workspace = true
